# further-suggestions

./: .cproject  .gitignore  .project  .wrproject  DriveWrapper.cpp  README.md  further-suggestions.cpp
Ben Kempke/cv_sandbox/: .gitignore  CMakeLists.txt  Makefile  balltrack.cpp  capture.cpp  opencv_ex.cpp  rgc_test.cpp  tiltdemo.cpp  tracker.cpp
Ben Kempke/cv_sandbox/arduino/tracker/: tracker.ino
Ben Kempke/cv_sandbox/cmake/Modules/: FindFreenect.cmake
Brendan Elliott/: UnitOne_Math1.cpp  UnitOne_Math2.cpp  UnitTwo_2Doors.cpp  UnitTwo_Fate.cpp
Donovan Porter/Chapter 1/: counter.cpp  counterintuitive_exit.cpp  doors.cpp  fate_case.cpp  math_1.cpp  math_2.cpp  right_triangle.cpp  right_triangle_height.cpp
Donovan Porter/Chapter 2/: rectangle.cpp  (+1 more)
Jin sakuma/: Defines.h
Kevin Morris #yolo/: Lessons.cpp  Lessons.layout
PPC603gnu/: Makefile
Paul Bonnen/: GroupExample.cpp  WPIBase.cpp  conflict.txt  looping.cpp
Riley Morris/: math 1.cpp
Ryan Robinson/: Counter.cpp  Doors.cpp  Fate.cpp  If else satement.cpp  Math 1.cpp  Math 2.cpp  conseutive exit.cpp  fate2.cpp  right triangle.cpp
VARUN KUTIRAKULAM/: Counterintuitive.cpp  DOORS.cpp  FATE.cpp  Right Triangle.cpp  SWCA.cpp  WPI 1.docx  WPI3.cpp  chatper7.cpp  datastruc.cpp  first program.cpp  functions.cpp  l3.cpp  math 2.cpp  math1.cpp  pancke.cpp  temperature.cpp
further-suggestions/: AdvancedJoystick.cpp  AdvancedJoystick.h  ArmWrapper.cpp  ArmWrapper.h  CameraHandler.cpp  CameraHandler.h  Defines.h  DriveWrapper.cpp  DriveWrapper.h  JoystickWrapper.cpp  JoystickWrapper.h  further-suggestions.cpp
(+101 files in other folders)
